# ChangeLog for net-dns/bind-tools
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.124 2009/02/11 16:30:59 dertobi123 Exp $

  11 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  bind-tools-9.5.1_p1.ebuild, bind-tools-9.6.0_p1.ebuild:
  Fix SRC_URI, #257993

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> bind-tools-9.4.3_p1.ebuild:
  ia64/sparc stable wrt #254134

  10 Jan 2009; Markus Meier <maekke@gentoo.org> bind-tools-9.4.3_p1.ebuild:
  amd64/x86 stable, bug #254134

  09 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  bind-tools-9.4.3_p1.ebuild:
  Stable on alpha, bug #254134

  09 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  bind-tools-9.4.3_p1.ebuild:
  ppc stable, bug #254134

  08 Jan 2009; Brent Baude <ranger@gentoo.org> bind-tools-9.4.3_p1.ebuild:
  Marking bind-tools-9.4.3_p1 ppc64 for bug 254134

  08 Jan 2009; Guy Martin <gmsoft@gentoo.org> bind-tools-9.4.3_p1.ebuild:
  hppa stable, #254134

*bind-tools-9.6.0_p1 (07 Jan 2009)
*bind-tools-9.5.1_p1 (07 Jan 2009)

  07 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -bind-tools-9.5.1.ebuild, +bind-tools-9.5.1_p1.ebuild,
  -bind-tools-9.6.0.ebuild, +bind-tools-9.6.0_p1.ebuild:
  Version bump, #254134

*bind-tools-9.4.3_p1 (07 Jan 2009)

  07 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.4.3_p1.ebuild:
  Version bump, #254134

*bind-tools-9.6.0 (26 Dec 2008)

  26 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.6.0.ebuild:
  Version bump

*bind-tools-9.5.1 (26 Dec 2008)

  26 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -bind-tools-9.4.3.ebuild, -bind-tools-9.5.0_p2.ebuild,
  +bind-tools-9.5.1.ebuild:
  Version bump

*bind-tools-9.4.3 (19 Nov 2008)

  19 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.4.3.ebuild:
  Version bump

  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>