@@ -1,23 +1,24 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/bind-tools-9.4.1_p1.ebuild,v 1.12 2008/08/02 12:22:05 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/bind-tools-9.4.3_p2.ebuild,v 1.1 2009/04/11 17:05:45 dertobi123 Exp $
 
 inherit flag-o-matic
 
 MY_PN=${PN//-tools}
-MY_PV=${PV/_p/-P}
-MY_P=${MY_PN}-${MY_PV}
-S=${WORKDIR}/${MY_P}
-DESCRIPTION="bind tools: dig, nslookup, and host"
+MY_PV=${PV/_p2/-P2}
+MY_P="${MY_PN}-${MY_PV}"
+S="${WORKDIR}/${MY_P}"
+DESCRIPTION="bind tools: dig, nslookup, host, nsupdate, dnssec-keygen"
 HOMEPAGE="http://www.isc.org/products/BIND/bind9.html"
 SRC_URI="ftp://ftp.isc.org/isc/bind9/${MY_PV}/${MY_P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE="idn ipv6"
 
-DEPEND="idn? ( || ( sys-libs/glibc dev-libs/libiconv ) )"
+DEPEND="idn? ( || ( sys-libs/glibc dev-libs/libiconv )
+			net-dns/idnkit )"
 
 src_unpack() {
 	unpack ${A} || die
@@ -41,6 +42,9 @@ src_unpack() {
 src_compile() {
 	local myconf=
 	use ipv6 && myconf="${myconf} --enable-ipv6" || myconf="${myconf} --enable-ipv6=no"
+	use idn  && myconf="${myconf} --with-idn"
+
+	has_version sys-libs/glibc || myconf="${myconf} --with-iconv"
 
 	econf ${myconf} || die "Configure failed"
 
@@ -56,13 +60,8 @@ src_compile() {
 	cd "${S}"/bin/nsupdate/
 	emake -j1 || die "make failed in /bin/nsupdate"
 
-	use idn && {
-		cd "${S}"/contrib/idn/idnkit-1.0-src
-		local myconf=
-		has_version sys-libs/glibc || myconf="${myconf} --with-iconv"
-		econf ${myconf} || die "idn econf failed"
-		emake -j1 || die "idn emake failed"
-	}
+	cd "${S}"/bin/dnssec/
+	emake -j1 || die "make failed in /bin/dnssec"
 }
 
 src_install() {
@@ -74,6 +73,11 @@ src_install() {
 
 	cd "${S}"/bin/nsupdate
 	dobin nsupdate || die
-	doman nsupdate.8 || die
+	doman nsupdate.1 || die
 	dohtml nsupdate.html || die
+
+	cd "${S}"/bin/dnssec
+	dobin dnssec-keygen || die
+	doman dnssec-keygen.8 || die
+	dohtml dnssec-keygen.html || die
 }
